<resources>
    <string name="app_name">记事本</string>
    <string name="notepad_title">记事本</string>
    <string name="add_note">添加记录</string>
    <string name="edit_note">修改记录</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_content">请输入要记录的内容</string>
    <string name="delete_note">删除</string>
    <string name="save_note">保存</string>
    <string name="polish_note">润色</string>
    <string name="back">返回</string>
    <string name="empty_tip">还没有记录，点击下方按钮添加</string>
</resources>
